<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/decideSaveMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.session.decide.DecideSaveActivity">

    <!-- Title text -->
    <TextView
        android:id="@+id/decideSaveTitleText"
        style="@style/text80pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/save_session_question"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- Save button -->
    <android.widget.Button
        android:id="@+id/btnSave"
        style="@style/text80pt"
        android:layout_width="480dp"
        android:layout_height="160dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/big_button"
        android:elevation="8dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:translationZ="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnDiscard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decideSaveTitleText" />

    <!-- Discard button -->
    <android.widget.Button
        android:id="@+id/btnDiscard"
        style="@style/text80pt"
        android:layout_width="480dp"
        android:layout_height="160dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/big_button"
        android:elevation="8dp"
        android:text="@string/discard"
        android:textAllCaps="false"
        android:translationZ="8dp"
        app:layout_constraintBottom_toTopOf="@id/mainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSave" />

    <!-- Go back to main button -->
    <android.widget.Button
        android:id="@+id/mainButton"
        style="@style/text64pt"
        android:layout_width="560dp"
        android:layout_height="120dp"
        android:background="@drawable/grad_button"
        android:elevation="8dp"
        android:text="@string/go_back_to_main"
        android:textAllCaps="false"
        android:translationZ="8dp"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDiscard" />

</androidx.constraintlayout.widget.ConstraintLayout>

